	* JPEG2000 file format support now can be compiled with either JasPer or OpenJPEG library
	* GIF loader made more tolerant to truncated or malformed GIF files
	* "Palette->Open" now can extract palette from indexed images in any supported file format
	* "Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
	* Filename and modified status now part of undo system
	* New keyboard shortcuts added - J for lasso tool, D for line tool, F for flood fill tool
	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"
	* Loading default settings from /etc/mtpaint/mtpaintrc is now supported in Windows version
	* Name and location of user settings file is now configurable : See handbook section A.6.4 for details
	* Drawing and fill tools now are 2-3 times faster
	* Support for compiling with libpng 1.4, libjpeg 8a, and zlib 1.2.5 added
	* Configure script rewritten, now understands standard variables and options for installation paths and (cross-)compilation settings
	* Minimum required GTK+2 version now can be specified as configure option (e.g., "./configure gtk2.8")
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
	* BUGFIX - Problems with editing large images at high zoom levels are now eliminated
	* BUGFIX - Titlebar now displays new image's filename after loading layers file, as it should
	* BUGFIX - Layers list now correctly displays selected layer after loading layers file
	* BUGFIX - Loading TIFF files with X or Y mirroring doesn't cause crash
	* BUGFIX - Planar TIFF files with alpha now load properly
	* BUGFIX - Transparency in indexed TGA files is now read properly
	* BUGFIX - Failed operations now do not flag image as modified
	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB